<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#CC1C1C1C"
    android:padding="18dp"
    android:elevation="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_loop_count"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etLoopCount"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/number_of_loops"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <CheckBox
        android:id="@+id/cbInfinite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infinite_loop"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="14dp"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/overlay_button_bg"
            android:text="@string/cancel"
            android:textColor="#9FA8DA" />

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/overlay_button_bg"
            android:text="@string/save"
            android:textColor="#9FA8DA" />

    </LinearLayout>
</LinearLayout>
