<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#CC1C1C1C"
    android:padding="16dp"
    android:elevation="20dp"
    android:gravity="center"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hold_time_ms"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvHoldTime"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/etActionDuration"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:autofillHints=""
            android:inputType="number"
            android:maxLines="1"
            android:visibility="gone"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delay_ms"
            android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp"
            android:id="@+id/tvDelay"/>

        <EditText
            android:id="@+id/etActionDelay"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            tools:ignore="LabelFor,TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5sp"
            android:background="@drawable/overlay_button_bg"
            android:text="@string/cancel"
            android:textColor="#9FA8DA" />

        <Button
            android:id="@+id/btnConfirm"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/overlay_button_bg"
            android:text="@string/ok"
            android:textColor="#9FA8DA" />

    </LinearLayout>
</LinearLayout>